pods/curl-alpaine.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: curl-alpaine
spec:
  replicas: 1
  selector:
    matchLabels:
      app: curl-alpaine
  template:
    metadata:
      labels:
        app: curl-alpaine
    spec:
      containers:
        - name: curl-alpaine
          image: bashiraljounaidy/curl-alpaine:latest
