pods/nginx-deplyment.yaml
# deployment-app1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-app4
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx-app4
  template:
    metadata:
      labels:
        app: nginx-app4
    spec:
      containers:
      - name: nginx
        image: nginx
        volumeMounts:
        - name: html-content
          mountPath: /usr/share/nginx/html
        ports:
        - containerPort: 80
      volumes:
      - name: html-content
        configMap:
          name: welcome-app4
